# hunter_robot

./: README.md
.devcontainer/: devcontainer.json
.github/workflows/: ros-ci.yml
dogtooth_base/: CMakeLists.txt  dogtooth_base.xml  package.xml
dogtooth_base/config/: controllers.yaml  hardware_controllers.yaml
dogtooth_base/description/: dogtooth.urdf.xacro  robot_core.xacro
dogtooth_base/launch/: dogtooth.launch.py
dogtooth_base/tmule/: launch_real.yaml
dogtooth_control/: CMakeLists.txt
dogtooth_control/description/: ros2_control.xacro
dogtooth_controller/: CHANGELOG.rst  CMakeLists.txt  dogtooth_hardware_plugin.xml  dogtooth_plugin.xml  package.xml
dogtooth_controller/doc/: userdoc.rst
dogtooth_controller/include/dogtooth_controller/: dogtooth_controller.hpp  odometry.hpp  speed_limiter.hpp  visibility_control.h
dogtooth_controller/include/dogtooth_hardware/: dogtooth_hardware.hpp  visibility_control.h
dogtooth_controller/src/: dogtooth_controller.cpp  dogtooth_controller_parameter.yaml  dogtooth_hardware.cpp  odometry.cpp  speed_limiter.cpp
dogtooth_controller/test/: test_dogtooth_controller.cpp  test_load_dogtooth_controller.cpp
dogtooth_controller/test/config/: test_dogtooth_controller.yaml
dogtooth_description/: CMakeLists.txt  package.xml
dogtooth_description/description/: dogtooth.ros2_control.xacro  dogtooth.urdf.xacro  dogtooth_core.urdf.xacro  dogtooth_hardware.urdf.xacro  gazebo_control.xacro  robot_core.xacro  ros2_control.xacro  wheel.urdf.xacro  wheel.xacro
dogtooth_description/launch/: rsp.launch.py
dogtooth_description/meshes/: wheel.dae
dogtooth_gazebo/: CMakeLists.txt  package.xml
dogtooth_gazebo/config/: controllers.yaml
dogtooth_gazebo/launch/: launch_sim.launch.py
hunter_base/: CMakeLists.txt  package.xml
hunter_base/src/: hunter_base_ros.cpp
hunter_base/tmule/: launch_real.yaml
hunter_controller/: CHANGELOG.rst  CMakeLists.txt  hunter_hardware_plugin.xml  hunter_plugin.xml  package.xml
hunter_controller/doc/: userdoc.rst
hunter_controller/include/hunter_controller/: hunter_controller.hpp  odometry.hpp  speed_limiter.hpp  visibility_control.h
hunter_controller/include/hunter_hardware/: hunter_hardware.hpp  visibility_control.h
hunter_controller/src/: hunter_controller.cpp  hunter_controller_parameter.yaml  hunter_hardware.cpp  odometry.cpp  speed_limiter.cpp
hunter_description/: CHANGELOG.rst  CMakeLists.txt  package.xml  ros2_control_carlikebot.xml
hunter_description/config/: ackermann_and_arm_controller.yaml  ackermann_controller.yaml  ackermann_like_controller.yaml  bicycle_controller.yaml  carlikebot_controllers.yaml
hunter_description/description/: gazebo_control.xacro  gazebo_ros2_control_plugin.xacro  hunter.ros2_control.xacro  hunter.urdf.xacro  hunter2_core.rdf  hunter2_core.urdf  hunter2_core.xacro  hunter_core.urdf.xacro  hunter_hardware.urdf.xacro  hunter_se_description.urdf  hunter_se_description.xacro  inertial_macros.xacro  meshes.xacro  robot.urdf  robot.urdf.xacro  robot2.urdf.xacro  robot_core.xacro  robot_core_real_hack.xacro  ros2_control.xacro  ros2_control2.xacro  ros2_control_ackermann.xacro  ros2_control_bicycle.xacro  wheel.urdf.xacro
hunter_description/hardware/: carlikebot_system.cpp
hunter_description/hardware/include/: carlikebot_system.hpp
hunter_description/launch/: display.launch.py  hunter_carlikebot.launch.py  launch_sim.launch.py  robot_view.launch.py  robot_view_control.launch.py  rsp.launch.py  rsp.py  view_robot.launch.py
hunter_description/meshes/: chassis.dae  front_left_wheel.dae  front_right_wheel.dae  rear_left_wheel.dae  rear_right_wheel.dae  wheel.dae
hunter_description/rviz/: robot_view.rviz
hunter_description/vis/: rviz.rviz
hunter_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
hunter_gazebo/config/: carlikebot_controllers.yaml  controllers.yaml
hunter_gazebo/launch/: empty_world.launch.py  launch_sim.launch.py
