<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hunter_description</name>
  <version>0.0.0</version>
  <description>URDF Description package for hunter</description>
  <maintainer email="ihroob@lincoln.ac.uk">ibrahim</maintainer>
  <maintainer email="hari20002010@gmail.com">Hariharan Arunachalam</maintainer>
  <license>MIT</license>
  <author email="hari20002010@gmail.com">Hariharan Arunachalam</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
