<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hunter_gazebo</name>
  <version>0.0.2</version>
  <description>Gazebo package for hunter robot</description>
  <maintainer email="ihroob@lincoln.ac.uk">Ibrahim Hroob</maintainer>
  <maintainer email="hari20002010@gmail.com">Hariharan Arunachalam</maintainer>
  <license>Apache-2.0</license>
  <author email="hari20002010@gmail.com">Hariharan Arunachalam</author>
  <author email="ihroob@lincoln.ac.uk">Ibrahim Hroob</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <exec_depend>hunter_description</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo-ros2-control</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
